<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_catalogueRestaurant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_restaurantLogo"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:paddingBottom="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/egusi"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_restaurantName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/DarkTextAppearance"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_restaurantLogo"
            tools:text="@string/sample_restaurant_name" />

        <TextView
            android:id="@+id/tv_restaurantAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/LightTextAppearance"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_restaurantName"
            app:layout_constraintTop_toBottomOf="@+id/tv_restaurantName"
            tools:text="@string/sample_address" />

        <TextView
            android:id="@+id/tv_priceRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/ColoredTextAppearance"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_restaurantLogo"
            tools:text="@string/sample_price_range" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>