<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_registration"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_foodBanner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/login_page_image"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/img_appLogo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/img_foodBanner"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:srcCompat="@drawable/yum_mobile_app_logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_userGreeting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/sample_greeting"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_foodBanner" />

            <EditText
                android:id="@+id/txt_nameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableEnd="@drawable/ic_avatar"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/guideline13"
                app:layout_constraintTop_toBottomOf="@+id/txt_userGreeting"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/txt_phoneField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/ic_phone"
                android:ems="12"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintStart_toEndOf="@+id/guideline13"
                app:layout_constraintTop_toBottomOf="@+id/txt_nameField"
                tools:ignore="Autofill" />

            <ProgressBar
                android:id="@+id/pb_registration"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_Done"
                app:layout_constraintEnd_toEndOf="@+id/btn_Done"
                app:layout_constraintStart_toStartOf="@+id/btn_Done"
                app:layout_constraintTop_toTopOf="@+id/btn_Done" />

            <Button
                android:id="@+id/btn_Done"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_background_primary_dark_4"
                android:text="@string/done"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintStart_toEndOf="@+id/guideline13"
                app:layout_constraintTop_toBottomOf="@+id/txt_phoneField" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.84" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline14"
                app:layout_constraintStart_toEndOf="@+id/guideline13"
                app:layout_constraintTop_toBottomOf="@+id/btn_Done">

                <TextView
                    android:id="@+id/txt_gotAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_account_Q"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_switchAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/switch_account"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/txt_gotAccount"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>