<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_restEditor">

        <EditText
            android:id="@+id/txt_restaurantName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_background_accent_dark_ring_8"
            android:gravity="center"
            android:hint="@string/hint_restaurant_name"
            android:inputType="textPersonName"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/txt_minPrice"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/rounded_background_accent_dark_ring_8"
            android:drawableStart="@drawable/ic_naira"
            android:gravity="center"
            android:hint="  Lowest Price  "
            android:inputType="number"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/txt_maxPrice"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_background_accent_dark_ring_8"
            android:drawableStart="@drawable/ic_naira"
            android:gravity="center"
            android:hint="  HighestPrice  "
            android:inputType="number"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/txt_restaurantAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_background_accent_dark_ring_8"
            android:gravity="center"
            android:hint="@string/hint_restaurant_address"
            android:inputType="textPostalAddress"
            android:padding="4dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_geoTagRestaurant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_minPrice"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/btn_geoTagRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_background_accent_dark_ring_8"
            app:layout_constraintBottom_toBottomOf="@+id/txt_restaurantAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_restaurantAddress"
            app:srcCompat="@drawable/ic_pin"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_upRestaurantImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_background_primary_dark_8"
            android:text="@string/btn_upload_Image"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_restaurantAddress" />

        <Button
            android:id="@+id/btn_manageMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_background_primary_dark_ring_8"
            android:text="@string/manage_menu"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upRestaurantImage" />

        <Button
            android:id="@+id/btn_saveRestaurant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_background_primary_dark_ring_8"
            android:text="@string/save_restaurant"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upRestaurantImage" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/restaurantItemPreview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_background_primary_dark_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pb_restEditor">

            <ImageView
                android:id="@+id/img_restaurantLogo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_background_accent_dark_ring_8"
                android:padding="4dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/restaurant"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_restaurantName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/sample_restaurant_name"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_restaurantLogo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_priceRange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sample_description"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/img_restaurantLogo"
                app:layout_constraintTop_toBottomOf="@+id/tv_restaurantName"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_restaurantAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:drawableEnd="@drawable/ic_pin"
                android:text="@string/sample_address"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:drawableTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/img_restaurantLogo"
                app:layout_constraintTop_toBottomOf="@+id/tv_priceRange" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/pb_restEditor"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_saveRestaurant" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_restaurantName"
            app:srcCompat="@drawable/ic_minus" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>